# FiniteFifferenceMPI

./: .gitignore  CMakeLists.txt  Condition.h  Condition.h.gch  FiniteDifference.cpp  FiniteDifference.h  ProcessConfigurator.cpp  ProcessConfigurator.h  ProcessConfigurator.h.gch  README.md  ResultWritter.cpp  ResultWritter.h  Var6Cond.h  Var6Cond.h.gch  main.cpp
